plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.0'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'gg.modl.backend'
version = '2.2.0'
description = 'backend'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
	maven { url 'https://nexus.modl.gg/repository/maven-releases/' }
	flatDir { dirs 'libs' }
}

subprojects {
	repositories {
		mavenCentral()
	}

	java {
		toolchain {
			languageVersion = JavaLanguageVersion.of(21)
		}
	}
}

dependencies {
    // Spring Boot Starters
    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    runtimeOnly 'io.micrometer:micrometer-registry-prometheus'

    // Rate limiting
    implementation 'com.bucket4j:bucket4j_jdk17-core:8.14.0'

    // External Services
    implementation 'io.github.cdimascio:dotenv-java:3.2.0'
    implementation 'com.stripe:stripe-java:31.0.0'
    implementation 'com.google.genai:google-genai:1.31.0'

    // AWS S3 (Backblaze B2)
    implementation platform('software.amazon.awssdk:bom:2.29.0')
    implementation 'software.amazon.awssdk:s3'

    // WebAuthn / Passkeys
    implementation 'com.yubico:webauthn-server-core:2.5.4'

    // Replay format
    implementation 'gg.modl.minecraft.replay:replay-format:1.1.0'

    // Shared protobuf types
    implementation 'gg.modl:proto:1.3.0'

    // Caching
    implementation 'com.github.ben-manes.caffeine:caffeine:3.1.8'

    // Utilities
    implementation 'com.github.slugify:slugify:3.0.7'

    // Compile-only
    compileOnly 'org.jetbrains:annotations:26.0.2'
    compileOnly 'org.projectlombok:lombok'
    compileOnly project(':mongo-fields-annotations')
    annotationProcessor 'org.projectlombok:lombok'
    annotationProcessor project(':mongo-fields-processor')

    // Testing
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'com.google.code.gson:gson:2.11.0'
    testImplementation 'org.mongodb:mongodb-driver-sync'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.withType(JavaCompile) {
    options.compilerArgs << '-parameters'
}

tasks.named('test') {
	useJUnitPlatform()
	binaryResultsDirectory = file("$buildDir/test-results/test/binary-${System.currentTimeMillis()}")
	testLogging {
		events 'failed', 'skipped'
		exceptionFormat 'full'
		showStandardStreams = false
	}
}
